--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     //stetho
     compile 'com.facebook.stetho:stetho:1.5.0'
     //misc-ui
+    compile "org.jsoup:jsoup:1.10.2"
 
 }
