--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
+    signingConfigs {
+        release_config {
+            keyAlias 'android'
+            keyPassword 'android'
+            storeFile file('/Users/gurpreet/Projects/dummy.jks')
+            storePassword 'android'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
@@ -17,6 +25,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release_config
         }
     }
     compileOptions {
@@ -48,7 +57,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-
     // Support Libraries
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -74,12 +82,11 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
     //simple SQL provider
-    compile "com.squareup:javapoet:1.2.0"
-    compile "ckm.simple:simple_sql_provider_annotation:1.0.6"
-    compile "ckm.simple:simple_sql_provider_processor:1.0.6"
+    compile 'com.squareup:javapoet:1.2.0'
+    compile 'ckm.simple:simple_sql_provider_annotation:1.0.6'
+    compile 'ckm.simple:simple_sql_provider_processor:1.0.6'
     //stetho
     compile 'com.facebook.stetho:stetho:1.5.0'
     //misc-ui
-    compile "org.jsoup:jsoup:1.10.2"
-
+    compile 'org.jsoup:jsoup:1.10.2'
 }
